--- a/common/package.json
+++ b/common/package.json
@@ -2,10 +2,15 @@
   "name": "@bats/phoenix-common",
   "version": "1.0.0",
   "description": "Common BURST library",
-  "contributors":  ["ohager"],
+  "contributors": [
+    "ohager"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/burst-apps-team/phoenix"
+  },
+  "engines": {
+    "node": ">=10"
   },
   "license": "GPL-3.0",
   "main": "index.js",
