--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -1,7 +1,9 @@
 {
   "name": "@bats/phoenix-web-angular-wallet",
   "version": "1.0.0",
-  "contributors":  ["ohager"],
+  "contributors": [
+    "ohager"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/burst-apps-team/phoenix"
@@ -12,11 +14,13 @@
     "wallet"
   ],
   "license": "GPL-3.0",
+  "engines": {
+    "node": ">=10"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:desktop": "node ../../scripts/build --target desktop",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -31,6 +35,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@bats/phoenix-common": "file:../../common",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
