--- a/desktop/wallet/package.json
+++ b/desktop/wallet/package.json
@@ -2,6 +2,14 @@
   "name": "@bats/phoenix-desktop-wallet",
   "productName": "BURST Phoenix Desktop Wallet",
   "version": "1.0.0",
+  "contributors": [
+    "ohager"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/burst-apps-team/phoenix"
+  },
+  "license": "GPL-3.0",
   "description": "The BURST coin desktop wallet",
   "keywords": [
     "burst",
@@ -9,12 +17,18 @@
     "wallet"
   ],
   "main": "main.js",
-  "scripts": {
-    "start": "electron .",
-    "release:linux": "electron-packager . @bats/phoenix-desktop-wallet --overwrite --asar=true --platform=linux --arch=x64 --prune=true --out=release-builds"
+  "engines": {
+    "node": ">=10"
   },
-  "author": "ohager",
-  "license": "GPL-3.0",
+  "scripts": {
+    "build": "node ../../scripts/build.js --target desktop",
+    "start": "npm run build && electron .",
+    "pack": "npm run build && electron-packager . @bats/phoenix-desktop-wallet --overwrite --asar=true --prune=true --out=release-builds",
+    "release:all": "npm run pack -- --all",
+    "release:linux": "npm run pack -- --platform=linux --arch=x64",
+    "release:win32": "npm run pack -- --platform=win32 --arch=x64",
+    "release:macos": "npm run pack -- --platform=macos --arch=x64"
+  },
   "devDependencies": {
     "electron": "^4.0.1",
     "electron-packager": "^13.0.1"
