--- a/common/package.json
+++ b/common/package.json
@@ -14,12 +14,17 @@
   },
   "license": "GPL-3.0",
   "main": "index.js",
+  "types": "index.d.ts",
   "private": false,
   "devDependencies": {
+    "axios-mock-adapter": "^1.16.0",
     "babel-core": "^6.26.3",
     "babel-jest": "^23.6.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "esdoc": "^1.1.0",
+    "esdoc-standard-plugin": "^1.0.0",
+    "husky": "^1.3.1",
     "jest": "^23.6.0",
     "regenerator-runtime": "^0.13.1"
   },
@@ -29,6 +34,16 @@
     ]
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "doc": "./node_modules/.bin/esdoc"
+  },
+  "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^0.18.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm test && npm doc"
+    }
   }
 }
