--- a/common/tsconfig.json
+++ b/common/tsconfig.json
@@ -1,8 +1,10 @@
 {
+  "compileOnSave": true,
   "compilerOptions": {
     "module": "commonjs",
     "target": "es5",
-    "sourceMap": true
+    "sourceMap": true,
+    "lib": [ "es2015" ]
   },
   "exclude": [
     "node_modules"
