--- a/common/package.json
+++ b/common/package.json
@@ -17,6 +17,7 @@
   "types": "./src/index.d.ts",
   "private": false,
   "devDependencies": {
+    "@types/jest": "^23.3.12",
     "axios-mock-adapter": "^1.16.0",
     "babel-core": "^6.26.3",
     "babel-jest": "^23.6.0",
@@ -26,12 +27,9 @@
     "esdoc-standard-plugin": "^1.0.0",
     "husky": "^1.3.1",
     "jest": "^23.6.0",
-    "regenerator-runtime": "^0.13.1"
-  },
-  "jest": {
-    "setupFiles": [
-      "<rootDir>/jest.init.js"
-    ]
+    "regenerator-runtime": "^0.13.1",
+    "ts-jest": "^23.10.5",
+    "typescript": "^3.2.2"
   },
   "scripts": {
     "test": "jest",
