--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -35,7 +35,8 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "@bats/phoenix-common": "file:../../common",
+    "burst-js": "file:../../lib",
+    "@burst/http": "file:../../lib/packages/http",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
