fix: allow angular-wallet to build

--- a/lib/packages/http/package.json
+++ b/lib/packages/http/package.json
@@ -29,13 +29,14 @@
       "json"
     ]
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "jest",
     "doc": "./node_modules/.bin/esdoc"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^0.18.0"
   },
   "husky": {
     "hooks": {
