--- a/lib/package.json
+++ b/lib/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Common BURST library",
   "contributors": [
-    "ohager"
+    "ohager",
+    "blankey"
   ],
   "repository": {
     "type": "git",
@@ -37,20 +38,20 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "esdoc": "^1.1.0",
+    "esdoc-importpath-plugin": "^1.0.2",
     "esdoc-standard-plugin": "^1.0.0",
     "husky": "^1.3.1",
     "jest": "^23.6.0",
+    "lerna": "^3.10.5",
     "regenerator-runtime": "^0.13.1",
     "ts-jest": "^23.10.5",
-    "typescript": "^3.2.2",
-    "lerna": "^3.10.5"
+    "typescript": "^3.2.2"
   },
   "scripts": {
     "test": "jest",
     "doc": "./node_modules/.bin/esdoc"
   },
   "dependencies": {
-    "@types/axios": "^0.14.0",
     "axios": "^0.18.0"
   },
   "husky": {
