--- a/lib/tsconfig.json
+++ b/lib/tsconfig.json
@@ -4,7 +4,10 @@
     "module": "commonjs",
     "target": "es5",
     "sourceMap": true,
-    "lib": [ "es2015" ]
+    "lib": [ "es2015" ],
+    "typeRoots": [
+      "node_modules/@types"
+    ]
   },
   "exclude": [
     "node_modules"
