--- a/lib/package.json
+++ b/lib/package.json
@@ -52,7 +52,8 @@
     "doc": "./node_modules/.bin/esdoc"
   },
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "esdoc-typescript-plugin": "^1.0.1"
   },
   "husky": {
     "hooks": {
