--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -64,27 +64,25 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "7.0.6",
-    "@angular/compiler-cli": "7.0.4",
-    "@angular/language-service": "7.0.4",
-    "@angular-devkit/build-angular": "0.10.6",
-    "@angularclass/hmr": "2.1.3",
-    "@types/jasmine": "2.8.11",
-    "@types/jasminewd2": "2.0.6",
-    "@types/lodash": "4.14.118",
-    "@types/node": "8.9.5",
-    "codelyzer": "4.5.0",
-    "jasmine-core": "2.99.1",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "3.0.0",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-coverage-istanbul-reporter": "2.0.4",
-    "karma-jasmine": "1.1.2",
-    "karma-jasmine-html-reporter": "0.2.2",
-    "protractor": "5.4.1",
-    "ts-node": "7.0.1",
-    "tslint": "5.11.0",
-    "typescript": "3.1.6",
-    "webpack-bundle-analyzer": "3.0.3"
+    "@angular-devkit/build-angular": "^0.12.1",
+    "@angular/cli": "~7.1.4",
+    "@angular/compiler-cli": "~7.2.0",
+    "@angular/language-service": "~7.2.0",
+    "@angularclass/hmr": "^2.1.3",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~3.1.1",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "^3.1.6"
   }
 }
