feat(lib): add crypto and core libs, plus an example

--- a/lib/packages/http/package.json
+++ b/lib/packages/http/package.json
@@ -14,7 +14,7 @@
     "node": ">=10"
   },
   "license": "GPL-3.0",
-  "main": "index.ts",
+  "main": "./src/index.ts",
   "private": false,
   "jest": {
     "transform": {
