--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -42,6 +42,9 @@
     "@swimlane/ngx-datatable": "14.0.0",
     "@swimlane/ngx-dnd": "6.0.0",
     "@types/prismjs": "1.9.0",
+    "@burst/http": "file:../../lib/packages/http",
+    "@burst/core": "file:../../lib/packages/core",
+    "@burst/crypto": "file:../../lib/packages/crypto",
     "angular-calendar": "0.26.4",
     "angular-in-memory-web-api": "0.7.0",
     "chart.js": "2.7.3",
