--- a/lib/packages/crypto/package.json
+++ b/lib/packages/crypto/package.json
@@ -14,7 +14,7 @@
     "node": ">=10"
   },
   "license": "GPL-3.0",
-  "main": "index.ts",
+  "main": "./src/index.ts",
   "private": false,
   "jest": {
     "transform": {
@@ -37,7 +37,12 @@
     "doc": "./node_modules/.bin/esdoc"
   },
   "dependencies": {
-    "axios": "^0.18.0"
+    "@burst/http": "file:../http",
+    "@burst/core": "file:../core",
+    "@types/crypto-js": "^3.1.43",
+    "crypto-js": "^3.1.9-1",
+    "bn.js": "^4.11.8",
+    "seedrandom": "^2.4.3"
   },
   "husky": {
     "hooks": {
