chore: fix tests

--- a/web/angular-wallet/src/tsconfig.app.json
+++ b/web/angular-wallet/src/tsconfig.app.json
@@ -11,6 +11,7 @@
     "exclude": [
       "test.ts",
       "**/*.spec.ts",
-      "../../../lib/**/*.spec.ts"
+      "../../../lib/**/*.spec.ts",
+      "../../../lib/**/__tests__/**/*.ts"
     ]
 }
