--- a/lib/packages/http/package.json
+++ b/lib/packages/http/package.json
@@ -4,7 +4,7 @@
   "description": "Send commands to BURST over HTTP",
   "contributors": [
     "ohager",
-    "blankey"
+    "blankey1337"
   ],
   "repository": {
     "type": "git",
