--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -19,23 +19,23 @@
   "private": true,
   "dependencies": {
     "@agm/core": "1.0.0-beta.5",
-    "@angular/animations": "7.0.4",
-    "@angular/cdk": "7.0.4",
-    "@angular/common": "7.0.4",
-    "@angular/compiler": "7.0.4",
-    "@angular/core": "7.0.4",
+    "@angular/animations": "^7.2.0",
+    "@angular/cdk": "^7.2.1",
+    "@angular/common": "^7.2.0",
+    "@angular/compiler": "^7.2.0",
+    "@angular/core": "^7.2.0",
     "@angular/flex-layout": "7.0.0-beta.19",
-    "@angular/forms": "7.0.4",
-    "@angular/http": "7.0.4",
-    "@angular/material": "7.0.4",
-    "@angular/material-moment-adapter": "7.0.4",
-    "@angular/platform-browser": "7.0.4",
-    "@angular/platform-browser-dynamic": "7.0.4",
-    "@angular/router": "7.0.4",
-    "@ngrx/effects": "6.1.2",
-    "@ngrx/router-store": "6.1.2",
-    "@ngrx/store": "6.1.2",
-    "@ngrx/store-devtools": "6.1.2",
+    "@angular/forms": "^7.2.0",
+    "@angular/http": "^7.2.0",
+    "@angular/material": "^7.2.1",
+    "@angular/material-moment-adapter": "^7.2.1",
+    "@angular/platform-browser": "^7.2.0",
+    "@angular/platform-browser-dynamic": "^7.2.0",
+    "@angular/router": "^7.2.0",
+    "@ngrx/effects": "7.0.0",
+    "@ngrx/router-store": "7.0.0",
+    "@ngrx/store": "7.0.0",
+    "@ngrx/store-devtools": "7.0.0",
     "@ngx-translate/core": "11.0.1",
     "@swimlane/dragula": "3.7.3",
     "@swimlane/ngx-charts": "10.0.0",
@@ -48,7 +48,7 @@
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.7",
     "d3": "5.7.0",
-    "date-fns": "1.29.0",
+    "date-fns": "^1.30.1",
     "hammerjs": "2.0.8",
     "lodash": "4.17.11",
     "moment": "2.22.2",
@@ -65,7 +65,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.12.1",
-    "@angular/cli": "~7.1.4",
+    "@angular/cli": "^7.2.1",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
     "@angularclass/hmr": "^2.1.3",
