--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -69,6 +69,7 @@
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
     "@angularclass/hmr": "^2.1.3",
+    "@types/dragula": "^2.1.34",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
