feat(burstjs): add crypto and core libs, plus an example (#20)
* feat(dashboard): add dashboard page

Signed-off-by: blankey1337 <42594751+blankey1337@users.noreply.github.com>

* feat(dashboard): style dashboard blocks

* feat(crypto): add crypto lib

* feat(i18n): add i18n components

* feat(lib): add crypto and core libs, plus an example

* chore: fix tests

--- a/lib/packages/http/package.json
+++ b/lib/packages/http/package.json
@@ -4,7 +4,7 @@
   "description": "Send commands to BURST over HTTP",
   "contributors": [
     "ohager",
-    "blankey"
+    "blankey1337"
   ],
   "repository": {
     "type": "git",
@@ -14,7 +14,7 @@
     "node": ">=10"
   },
   "license": "GPL-3.0",
-  "main": "index.ts",
+  "main": "./src/index.ts",
   "private": false,
   "jest": {
     "transform": {
