--- a/lib/packages/crypto/package.json
+++ b/lib/packages/crypto/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "burst-js",
+  "name": "@burst/crypto",
   "version": "1.0.0",
-  "description": "Common BURST library",
+  "description": "Cryptographic functions for building Burstcoin apps.",
   "contributors": [
     "ohager",
-    "blankey"
+    "blankey1337"
   ],
   "repository": {
     "type": "git",
@@ -14,6 +14,7 @@
     "node": ">=10"
   },
   "license": "GPL-3.0",
+  "main": "./src/index.ts",
   "private": false,
   "jest": {
     "transform": {
@@ -29,29 +30,19 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^23.3.12",
-    "axios-mock-adapter": "^1.16.0",
-    "babel-core": "^6.26.3",
-    "babel-jest": "^23.6.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "esdoc": "^1.1.0",
-    "esdoc-importpath-plugin": "^1.0.2",
-    "esdoc-standard-plugin": "^1.0.0",
-    "husky": "^1.3.1",
-    "jest": "^23.6.0",
-    "lerna": "^3.10.5",
-    "regenerator-runtime": "^0.13.1",
-    "ts-jest": "^23.10.5",
-    "typescript": "^3.2.2"
+    "@types/jest": "^23.3.12"
   },
   "scripts": {
     "test": "jest",
     "doc": "./node_modules/.bin/esdoc"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "esdoc-typescript-plugin": "^1.0.1"
+    "@burst/http": "file:../http",
+    "@burst/core": "file:../core",
+    "@types/crypto-js": "^3.1.43",
+    "crypto-js": "^3.1.9-1",
+    "bn.js": "^4.11.8",
+    "seedrandom": "^2.4.3"
   },
   "husky": {
     "hooks": {
