--- a/web/angular-wallet/src/tsconfig.app.json
+++ b/web/angular-wallet/src/tsconfig.app.json
@@ -4,8 +4,14 @@
         "outDir": "../out-tsc/app",
         "module": "es2015"
     },
+    "include": [
+      "**/*.ts",
+      "../../../lib/**/*.ts"
+    ],
     "exclude": [
-        "test.ts",
-        "**/*.spec.ts"
+      "test.ts",
+      "**/*.spec.ts",
+      "../../../lib/**/*.spec.ts",
+      "../../../lib/**/__tests__/**/*.ts"
     ]
 }
