docs(readme): add installation instructions, add lerna bootstrap

--- a/lib/package.json
+++ b/lib/package.json
@@ -47,7 +47,8 @@
   },
   "scripts": {
     "test": "jest",
-    "doc": "./node_modules/.bin/esdoc"
+    "doc": "./node_modules/.bin/esdoc",
+    "bootstrap": "lerna exec npm install"
   },
   "dependencies": {
     "axios": "^0.18.0",
