feat(login): add account create scaffolding

--- a/lib/packages/crypto/tsconfig.json
+++ b/lib/packages/crypto/tsconfig.json
@@ -14,7 +14,8 @@
             "axios",
             "jest"
         ],
-        "typeRoots": [
+        "typeRoots": [ 
+            "typings", 
             "node_modules/@types"
         ]
     },
