--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -32,6 +32,9 @@
     "@angular/platform-browser": "^7.2.0",
     "@angular/platform-browser-dynamic": "^7.2.0",
     "@angular/router": "^7.2.0",
+    "@burst/core": "file:../../lib/packages/core",
+    "@burst/crypto": "file:../../lib/packages/crypto",
+    "@burst/http": "file:../../lib/packages/http",
     "@ngrx/effects": "7.0.0",
     "@ngrx/router-store": "7.0.0",
     "@ngrx/store": "7.0.0",
@@ -41,12 +44,12 @@
     "@swimlane/ngx-charts": "10.0.0",
     "@swimlane/ngx-datatable": "14.0.0",
     "@swimlane/ngx-dnd": "6.0.0",
+    "@types/bn.js": "^4.11.4",
     "@types/prismjs": "1.9.0",
-    "@burst/http": "file:../../lib/packages/http",
-    "@burst/core": "file:../../lib/packages/core",
-    "@burst/crypto": "file:../../lib/packages/crypto",
     "angular-calendar": "0.26.4",
     "angular-in-memory-web-api": "0.7.0",
+    "angular-notifier": "^4.1.1",
+    "bn.js": "^4.11.8",
     "chart.js": "2.7.3",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.7",
@@ -59,6 +62,7 @@
     "ngrx-store-freeze": "0.2.4",
     "ngx-color-picker": "7.0.2",
     "ngx-cookie-service": "2.0.0",
+    "ngx-mask": "^7.3.3",
     "perfect-scrollbar": "1.4.0",
     "prismjs": "1.15.0",
     "rxjs": "6.3.3",
