--- a/web/angular-wallet/angular.json
+++ b/web/angular-wallet/angular.json
@@ -24,7 +24,8 @@
                         "tsConfig": "src/tsconfig.app.json",
                         "assets": [
                             "src/favicon.ico",
-                            "src/assets"
+                            "src/assets",
+                            "src/locales"
                         ],
                         "styles": [
                             "src/styles.scss"
