--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@burst/phoenix-angular-web-wallet",
   "version": "0.0.1",
-  "license": "GPLv3",
+  "license": "GPL-3.0",
   "contributors":  [
     "ohager",
     "blankey1337"
