--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -2,7 +2,7 @@
   "name": "@burst/phoenix-angular-web-wallet",
   "version": "0.0.1",
   "license": "GPL-3.0",
-  "contributors":  [
+  "contributors": [
     "ohager",
     "blankey1337"
   ],
@@ -12,7 +12,7 @@
     "start": "ng serve --open",
     "start-hmr": "ng serve --configuration hmr --source-map=false --hmr-warning=false",
     "start-hmr-sourcemaps": "ng serve --configuration hmr --source-map=true --hmr-warning=false",
-    "build": "npm run bump-version && node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build",
+    "build": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build",
     "build-stats": "npm run build -- --dev --stats-json",
     "build-prod": "npm run build -- --prod",
     "build-prod-stats": "npm run build -- --prod --stats-json",
