--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "fuse",
-  "version": "7.0.1",
-  "license": "https://themeforest.net/licenses/terms/regular",
+  "name": "@burst/phoenix-angular-web-wallet",
+  "version": "0.0.1",
+  "license": "GPL-3.0",
+  "contributors": [
+    "ohager",
+    "blankey1337"
+  ],
   "scripts": {
+    "bump-version": "node ../../scripts/version.js --target ng",
     "ng": "ng",
     "start": "ng serve --open",
     "start-hmr": "ng serve --configuration hmr --source-map=false --hmr-warning=false",
     "start-hmr-sourcemaps": "ng serve --configuration hmr --source-map=true --hmr-warning=false",
-    "build": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --dev",
-    "build-stats": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --dev --stats-json",
-    "build-prod": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --prod",
-    "build-prod-stats": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --prod --stats-json",
+    "build": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build",
+    "build-stats": "npm run build -- --dev --stats-json",
+    "build-prod": "npm run build -- --prod",
+    "build-prod-stats": "npm run build -- --prod --stats-json",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
