--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -62,6 +62,7 @@
     "date-fns": "^1.30.1",
     "hammerjs": "2.0.8",
     "lodash": "4.17.11",
+    "lokijs": "^1.5.6",
     "moment": "2.22.2",
     "ng2-charts": "1.6.0",
     "ngrx-store-freeze": "0.2.4",
