Added keychain access, touchID and passcode auth, updated readme and lint rules

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,7 +14,9 @@
   "license": "GPL-3.0",
   "private": false,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "dev": "npm run dev:ios",
+    "dev:ios": "react-native run-ios --simulator=\"iPhone SE\"",
+    "dev:android": "react-native run-android",
     "lint": "tslint --fix --project tsconfig.json 'src/**/*.{ts,tsx}'",
     "test": "jest",
     "tsc": "tsc --init --pretty --jsx react"
@@ -23,11 +25,15 @@
     "@burst/core": "file:../lib/packages/core",
     "@burst/crypto": "file:../lib/packages/crypto",
     "@burst/http": "file:../lib/packages/http",
+    "@types/react-native-touch-id": "^4.0.1",
     "axios": "^0.18.0",
     "lodash": "^4.17.11",
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-gesture-handler": "^1.0.12",
+    "react-native-keychain": "^3.0.0",
+    "react-native-passcode-auth": "^1.0.0",
+    "react-native-touch-id": "^4.3.0",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
