--- a/lib/package.json
+++ b/lib/package.json
@@ -47,6 +47,7 @@
   },
   "scripts": {
     "test": "jest",
+    "test:e2e": "jest --config jest.config.e2e.js",
     "doc": "./node_modules/.bin/esdoc",
     "bootstrap": "lerna bootstrap && lerna exec npm install"
   },
