--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-languages')
     compile project(':react-native-touch-id')
     compile project(':react-native-keychain')
     compile project(':react-native-gesture-handler')
