--- a/mobile/package.json
+++ b/mobile/package.json
@@ -27,11 +27,13 @@
     "@burst/http": "file:../lib/packages/http",
     "@types/react-native-touch-id": "^4.0.1",
     "axios": "^0.18.0",
+    "i18n-js": "^3.1.0",
     "lodash": "^4.17.11",
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-gesture-handler": "^1.0.12",
     "react-native-keychain": "^3.0.0",
+    "react-native-languages": "^3.0.2",
     "react-native-touch-id": "^4.3.0",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/i18n-js": "^3.0.1",
     "@types/jest": "^23.3.13",
     "@types/lodash": "^4.14.120",
     "@types/react": "^16.7.20",
