--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,6 +18,7 @@
     "dev:ios": "react-native run-ios --simulator=\"iPhone SE\"",
     "dev:android": "react-native run-android",
     "lint": "tslint --fix --project tsconfig.json 'src/**/*.{ts,tsx}'",
+    "translations:sort": "node tasks/sortJsonDir.js src/core/localization/translations",
     "test": "jest",
     "tsc": "tsc --init --pretty --jsx react"
   },
@@ -59,6 +60,7 @@
     "metro-react-native-babel-preset": "0.51.1",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "16.6.3",
+    "sort-json": "^2.0.0",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
     "tslint-config-standard": "^8.0.1",
