chore(package): use burstjs instead of burst

--- a/lib/package.json
+++ b/lib/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "burst-js",
+  "name": "burstjs",
   "version": "1.0.0",
   "description": "Common BURST library",
   "contributors": [
