--- a/lib/packages/core/package.json
+++ b/lib/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@burst/core",
+  "name": "@burstjs/core",
   "version": "0.0.2",
   "description": "Burst-related functions and models for building Burstcoin applications.",
   "contributors": [
@@ -37,12 +37,13 @@
     "doc": "./node_modules/.bin/esdoc"
   },
   "dependencies": {
-    "@burst/http": "file:../http",
+    "@burst/http": "^0.0.2",
     "bn.js": "^4.11.8"
   },
   "husky": {
     "hooks": {
       "pre-push": "npm test"
     }
-  }
+  },
+  "gitHead": "5e6a8a79ae31038bad207cd18f6772b062767e65"
 }
