--- a/lib/packages/crypto/package.json
+++ b/lib/packages/crypto/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@burst/crypto",
+  "name": "@burstjs/crypto",
   "version": "0.0.2",
   "description": "Cryptographic functions for building Burstcoin apps.",
   "contributors": [
@@ -37,8 +37,8 @@
     "doc": "./node_modules/.bin/esdoc"
   },
   "dependencies": {
-    "@burst/core": "file:../core",
-    "@burst/http": "file:../http",
+    "@burst/core": "^0.0.2",
+    "@burst/http": "^0.0.2",
     "@types/crypto-js": "^3.1.43",
     "@types/seedrandom": "^2.4.27",
     "bn.js": "^4.11.8",
@@ -49,5 +49,6 @@
     "hooks": {
       "pre-push": "npm test"
     }
-  }
+  },
+  "gitHead": "5e6a8a79ae31038bad207cd18f6772b062767e65"
 }
