--- a/lib/packages/crypto/package.json
+++ b/lib/packages/crypto/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@burst/crypto",
-  "version": "1.0.0",
+  "name": "@burstjs/crypto",
+  "version": "0.0.5",
   "description": "Cryptographic functions for building Burstcoin apps.",
   "contributors": [
     "ohager",
@@ -37,8 +37,8 @@
     "doc": "./node_modules/.bin/esdoc"
   },
   "dependencies": {
-    "@burst/core": "file:../core",
-    "@burst/http": "file:../http",
+    "@burst/core": "^0.0.2",
+    "@burst/http": "^0.0.2",
     "@types/crypto-js": "^3.1.43",
     "@types/seedrandom": "^2.4.27",
     "bn.js": "^4.11.8",
@@ -49,5 +49,9 @@
     "hooks": {
       "pre-push": "npm test"
     }
+  },
+  "gitHead": "0a87d62edcd74661d38df6832a2a8f6122d1d127",
+  "publishConfig": {
+    "access": "public"
   }
 }
