--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,6 +18,7 @@
     "dev:ios": "react-native run-ios --simulator=\"iPhone SE\"",
     "dev:android": "react-native run-android",
     "lint": "tslint --fix --project tsconfig.json 'src/**/*.{ts,tsx}'",
+    "translations:sort": "node tasks/sortJsonDir.js src/core/localization/translations",
     "test": "jest",
     "tsc": "tsc --init --pretty --jsx react"
   },
@@ -27,11 +28,13 @@
     "@burst/http": "file:../lib/packages/http",
     "@types/react-native-touch-id": "^4.0.1",
     "axios": "^0.18.0",
+    "i18n-js": "^3.1.0",
     "lodash": "^4.17.11",
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-gesture-handler": "^1.0.12",
     "react-native-keychain": "^3.0.0",
+    "react-native-languages": "^3.0.2",
     "react-native-touch-id": "^4.3.0",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
@@ -44,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/i18n-js": "^3.0.1",
     "@types/jest": "^23.3.13",
     "@types/lodash": "^4.14.120",
     "@types/react": "^16.7.20",
@@ -56,6 +60,7 @@
     "metro-react-native-babel-preset": "0.51.1",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "16.6.3",
+    "sort-json": "^2.0.0",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
     "tslint-config-standard": "^8.0.1",
