--- a/lib/packages/core/package.json
+++ b/lib/packages/core/package.json
@@ -37,7 +37,7 @@
     "doc": "./node_modules/.bin/esdoc"
   },
   "dependencies": {
-    "@burst/http": "^0.0.2",
+    "@burstjs/http": "^0.0.5",
     "bn.js": "^4.11.8"
   },
   "husky": {
