--- a/lib/packages/crypto/package.json
+++ b/lib/packages/crypto/package.json
@@ -37,8 +37,8 @@
     "doc": "./node_modules/.bin/esdoc"
   },
   "dependencies": {
-    "@burst/core": "^0.0.2",
-    "@burst/http": "^0.0.2",
+    "@burstjs/core": "^0.0.5",
+    "@burstjs/http": "^0.0.5",
     "@types/crypto-js": "^3.1.43",
     "@types/seedrandom": "^2.4.27",
     "bn.js": "^4.11.8",
