--- a/lib/packages/core/package.json
+++ b/lib/packages/core/package.json
@@ -30,7 +30,8 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^23.3.12"
+    "@types/jest": "^23.3.12",
+    "dotenv": "^6.2.0"
   },
   "scripts": {
     "test": "jest",
