--- a/lib/packages/core/src/api/__tests__/e2e/helpers/.env.template
+++ b/lib/packages/core/src/api/__tests__/e2e/helpers/.env.template
@@ -16,3 +16,6 @@ TEST_PASSPHRASE=
 # A recipient test account
 TEST_RECIPIENT_ID=
 
+# A test transaction
+TEST_TRANSACTION_ID=16869443137219243808
+
