--- a/lib/package.json
+++ b/lib/package.json
@@ -50,7 +50,7 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:e2e": "jest --config jest.config.e2e.js --runInBand",
+    "test:e2e": "jest --config jest.config.e2e.js --runInBand --detectOpenHandles",
     "doc": "./node_modules/.bin/esdoc",
     "bootstrap": "lerna bootstrap && lerna exec npm install",
     "lint": "tslint -p tsconfig.json -t stylish -s node_modules/custom-tslint-formatters/formatters -t grouped"
