--- a/lib/packages/core/package.json
+++ b/lib/packages/core/package.json
@@ -38,7 +38,8 @@
     "doc": "./node_modules/.bin/esdoc"
   },
   "dependencies": {
-    "@burstjs/http": "^0.0.5",
+    "@burstjs/http": "file:../http",
+    "@burstjs/crypto": "file:../crypto",
     "bn.js": "^4.11.8"
   },
   "husky": {
