--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ cache:
   directories:
     - node_modules
 script:
-  - npm test:ci
+  - npm run test:ci
 
 after-success:
   - bash <(curl -s https://codecov.io/bash)
