--- a/lib/package.json
+++ b/lib/package.json
@@ -27,6 +27,7 @@
     "esdoc": "^1.1.0",
     "esdoc-importpath-plugin": "^1.0.2",
     "esdoc-standard-plugin": "^1.0.0",
+    "esdoc-typescript-plugin": "^1.0.1",
     "husky": "^1.3.1",
     "jest": "^23.6.0",
     "lerna": "^3.10.5",
@@ -45,8 +46,7 @@
     "lint": "tslint -p tsconfig.json -t stylish -s node_modules/custom-tslint-formatters/formatters -t grouped"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "esdoc-typescript-plugin": "^1.0.1"
+    "axios": "^0.18.0"
   },
   "husky": {
     "hooks": {
