chore(lib): add npm publish script and improve package versioning

--- a/lib/package.json
+++ b/lib/package.json
@@ -43,7 +43,8 @@
     "test:e2e": "jest --config jest.config.e2e.js --runInBand",
     "doc": "./node_modules/.bin/esdoc",
     "bootstrap": "lerna bootstrap && lerna exec npm install",
-    "lint": "tslint -p tsconfig.json -t stylish -s node_modules/custom-tslint-formatters/formatters -t grouped"
+    "lint": "tslint -p tsconfig.json -t stylish -s node_modules/custom-tslint-formatters/formatters -t grouped",
+    "publish": "lerna run tsc && lerna publish"
   },
   "dependencies": {
     "axios": "^0.18.0"
