--- a/lib/packages/core/package.json
+++ b/lib/packages/core/package.json
@@ -14,7 +14,8 @@
     "node": ">=10"
   },
   "license": "GPL-3.0",
-  "main": "./src/index.ts",
+  "main": "./out/index.ts",
+  "typings": "./out/index.d.ts",
   "private": false,
   "jest": {
     "transform": {
@@ -35,11 +36,12 @@
   },
   "scripts": {
     "test": "jest",
+    "tsc": "tsc",
     "doc": "./node_modules/.bin/esdoc"
   },
   "dependencies": {
-    "@burstjs/http": "file:../http",
-    "@burstjs/crypto": "file:../crypto",
+    "@burstjs/http": "0.0.5",
+    "@burstjs/crypto": "0.0.5",
     "bn.js": "^4.11.8"
   },
   "husky": {
