--- a/lib/packages/crypto/tsconfig.json
+++ b/lib/packages/crypto/tsconfig.json
@@ -4,7 +4,8 @@
         "outDir": "./out",
         "types": [
             "axios",
-            "jest"
+            "jest",
+            "node"
         ],
     },
     "typeRoots": [ 
