--- a/lib/packages/core/package.json
+++ b/lib/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@burstjs/core",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Burst-related functions and models for building Burstcoin applications.",
   "contributors": [
     "ohager",
@@ -40,8 +40,8 @@
     "doc": "./node_modules/.bin/esdoc"
   },
   "dependencies": {
-    "@burstjs/http": "0.0.5",
-    "@burstjs/crypto": "0.0.5",
+    "@burstjs/crypto": "^0.0.6",
+    "@burstjs/http": "^0.0.6",
     "bn.js": "^4.11.8"
   },
   "husky": {
