--- a/lib/package.json
+++ b/lib/package.json
@@ -40,7 +40,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:ci": "jest --coverage && codecov",
-    "test:e2e": "jest --config jest.config.e2e.js --runInBand",
+    "test:e2e": "jest --config jest.config.e2e.js --runInBand --detectOpenHandles --forceExit",
     "doc": "./node_modules/.bin/esdoc",
     "bootstrap": "lerna bootstrap && lerna exec npm install",
     "lint": "tslint -p tsconfig.json -t stylish -s node_modules/custom-tslint-formatters/formatters -t grouped"
