more progress towards fixing ios

--- a/lib/.npmignore
+++ b/lib/.npmignore
@@ -40,6 +40,7 @@ jspm_packages/
 
 # TypeScript v1 declaration files
 typings/
+.tsconfig
 
 # Optional npm cache directory
 .npm
@@ -64,3 +65,5 @@ packages/core/src/api/__tests__/e2e/helpers/.env
 
 __tests__
 
+# source code
+src
