--- a/lib/packages/http/tsconfig.json
+++ b/lib/packages/http/tsconfig.json
@@ -1,5 +1,4 @@
 {
-    "extends": "../../tsconfig.json",
     "compilerOptions": {
         "outDir": "./out",
         "types": [
@@ -13,5 +12,6 @@
     ],
     "include": [
         "./src"
-    ]
+    ],
+    "extends": "../../tsconfig.json"
 }
