fix(desktop): use burstjs 0.0.10

--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -37,9 +37,9 @@
     "@angular/platform-browser": "^7.2.0",
     "@angular/platform-browser-dynamic": "^7.2.0",
     "@angular/router": "^7.2.0",
-    "@burstjs/core": "file:../../lib/packages/core",
-    "@burstjs/crypto": "file:../../lib/packages/crypto",
-    "@burstjs/http": "file:../../lib/packages/http",
+    "@burstjs/core": "^0.0.10",
+    "@burstjs/crypto": "^0.0.10",
+    "@burstjs/http": "^0.0.10",
     "@ngrx/effects": "7.0.0",
     "@ngrx/router-store": "7.0.0",
     "@ngrx/store": "7.0.0",
