Fix iOS and Desktop apps to use @burstjs@0.0.10 (#47)
* chore(lib): add npm publish script and improve package versioning

* chore(lib): still working on it

* chore(lib): still working on it

* v0.0.6

* chore(lib): still working on it

* v0.0.7

* chore(lib): still working on it

* chore(lib): still working on it

* v0.0.8

* chore(lib): still working on it

* v0.0.9

* test(lib): try to fix tests (failed)

* v0.0.10

* more progress towards fixing ios

* fix(ios): make it build

* fix(actions): kinda fix typings

* fix(desktop): use burstjs 0.0.10

* chore(tsconfig): fix codacity issue

* chore: address PR feedback

--- a/lib/package.json
+++ b/lib/package.json
@@ -16,7 +16,7 @@
   "license": "GPL-3.0",
   "private": false,
   "devDependencies": {
-    "@types/jest": "^23.3.12",
+    "@types/jest": "^23.3.13",
     "axios-mock-adapter": "^1.16.0",
     "babel-core": "^6.26.3",
     "babel-jest": "^23.6.0",
@@ -43,7 +43,8 @@
     "test:e2e": "jest --config jest.config.e2e.js --runInBand --detectOpenHandles --forceExit",
     "doc": "./node_modules/.bin/esdoc",
     "bootstrap": "lerna bootstrap && lerna exec npm install",
-    "lint": "tslint -p tsconfig.json -t stylish -s node_modules/custom-tslint-formatters/formatters -t grouped"
+    "lint": "tslint -p tsconfig.json -t stylish -s node_modules/custom-tslint-formatters/formatters -t grouped",
+    "publish": "lerna run tsc && lerna publish"
   },
   "dependencies": {
     "axios": "^0.18.0"
