--- a/lib/packages/crypto/package.json
+++ b/lib/packages/crypto/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@burstjs/crypto",
-  "version": "0.0.5",
+  "version": "0.0.10",
   "description": "Cryptographic functions for building Burstcoin apps.",
   "contributors": [
     "ohager",
@@ -14,7 +14,8 @@
     "node": ">=10"
   },
   "license": "GPL-3.0",
-  "main": "./src/index.ts",
+  "main": "./out/src/index.js",
+  "typings": "./out/src/index.d.ts",
   "private": false,
   "jest": {
     "transform": {
@@ -34,10 +35,12 @@
   },
   "scripts": {
     "test": "jest",
+    "tsc": "tsc",
     "doc": "./node_modules/.bin/esdoc"
   },
   "dependencies": {
     "@types/crypto-js": "^3.1.43",
+    "@types/node": "^10.12.18",
     "@types/seedrandom": "^2.4.27",
     "bn.js": "^4.11.8",
     "crypto-js": "^3.1.9-1",
@@ -48,7 +51,7 @@
       "pre-push": "npm test"
     }
   },
-  "gitHead": "0a87d62edcd74661d38df6832a2a8f6122d1d127",
+  "gitHead": "d66916118ee787da2aacfc18b9809c66617c2b57",
   "publishConfig": {
     "access": "public"
   }
