--- a/lib/packages/crypto/tsconfig.json
+++ b/lib/packages/crypto/tsconfig.json
@@ -1,26 +1,18 @@
 {
     "compilerOptions": {
-        "target": "es5",
-        "lib": [
-            "es2015"
-        ],
-        "noImplicitThis": true,
-        "strict": true,
-        "outDir": "out",
-        "declaration": true,
-        "declarationDir": "typings",
-        "sourceMap": true,
+        "outDir": "./out",
         "types": [
             "axios",
-            "jest"
-        ],
-        "typeRoots": [ 
-            "typings", 
-            "node_modules/@types"
+            "jest",
+            "node"
         ]
     },
+    "typeRoots": [ 
+        "typings", 
+        "node_modules/@types"
+    ],
     "include": [
-        "src",
-        "__tests__"
-    ]
+        "./src"
+    ],
+    "extends": "../../tsconfig.json"
 }
