--- a/lib/packages/http/package.json
+++ b/lib/packages/http/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@burstjs/http",
-  "version": "0.0.5",
+  "version": "0.0.10",
   "description": "Send commands to BURST over HTTP",
   "contributors": [
     "ohager",
@@ -14,7 +14,8 @@
     "node": ">=10"
   },
   "license": "GPL-3.0",
-  "main": "./src/index.ts",
+  "main": "./out/index.js",
+  "typings": "./out/index.d.ts",
   "private": false,
   "jest": {
     "transform": {
@@ -34,6 +35,7 @@
   },
   "scripts": {
     "test": "jest",
+    "tsc": "tsc",
     "doc": "./node_modules/.bin/esdoc"
   },
   "dependencies": {
@@ -44,7 +46,7 @@
       "pre-push": "npm test"
     }
   },
-  "gitHead": "0a87d62edcd74661d38df6832a2a8f6122d1d127",
+  "gitHead": "d66916118ee787da2aacfc18b9809c66617c2b57",
   "publishConfig": {
     "access": "public"
   }
