--- a/lib/tsconfig.json
+++ b/lib/tsconfig.json
@@ -2,14 +2,24 @@
   "compileOnSave": true,
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es5",
+    "declaration": true,
+    "noImplicitAny": false,
+    "noImplicitThis": true,
+    "strictNullChecks": false,
+    "strict": true,
+    "removeComments": true,
+    "noLib": false,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "target": "es6",
     "sourceMap": true,
-    "lib": [ "es2015" ],
-    "typeRoots": [
-      "node_modules/@types"
+    "lib": [
+      "es6"
     ]
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "**/*.spec.ts",
+    "**/__tests__/**/*"
   ]
-}
+ }
