--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "bump-version": "node ../../scripts/version.js --target ng",
     "ng": "ng",
-    "start": "ng serve --open",
+    "start": "ng serve --open --proxy-config proxy.config.json",
     "start-hmr": "ng serve --configuration hmr --source-map=false --hmr-warning=false",
     "start-hmr-sourcemaps": "ng serve --configuration hmr --source-map=true --hmr-warning=false",
     "build": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build",
