docs(lib): add readme to output

--- a/lib/packages/crypto/tsconfig.json
+++ b/lib/packages/crypto/tsconfig.json
@@ -12,7 +12,8 @@
         "node_modules/@types"
     ],
     "include": [
-        "./src"
+        "./src",
+        "README.md"
     ],
     "extends": "../../tsconfig.json"
 }
