--- a/lib/packages/core/tsconfig.json
+++ b/lib/packages/core/tsconfig.json
@@ -11,7 +11,8 @@
         "node_modules/@types"
     ],
     "include": [
-        "./src"
+        "./src",
+        "README.md"
     ],
     "extends": "../../tsconfig.json"
 }
