--- a/lib/packages/http/tsconfig.json
+++ b/lib/packages/http/tsconfig.json
@@ -14,5 +14,11 @@
         "./src",
         "README.md"
     ],
+  "autogenerate-readme": {
+    "srcFiles": [
+      "./src/**/*.ts"
+    ],
+    "template": "./README.md.hbs"
+  },
     "extends": "../../tsconfig.json"
 }
