--- a/lib/package.json
+++ b/lib/package.json
@@ -16,6 +16,12 @@
   "license": "GPL-3.0",
   "private": false,
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-typescript": "^7.1.0",
     "@types/jest": "^23.3.13",
     "axios-mock-adapter": "^1.16.0",
     "babel-core": "^6.26.3",
@@ -30,11 +36,13 @@
     "esdoc-typescript-plugin": "^1.0.1",
     "husky": "^1.3.1",
     "jest": "^23.6.0",
+    "jsdoc-babel": "^0.5.0",
+    "jsdoc-to-markdown": "^4.0.1",
     "lerna": "^3.10.5",
     "regenerator-runtime": "^0.13.1",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
-    "typescript": "^3.2.2"
+    "typescript": "^3.3.1"
   },
   "scripts": {
     "test": "jest",
