--- a/lib/packages/crypto/package.json
+++ b/lib/packages/crypto/package.json
@@ -36,7 +36,8 @@
   "scripts": {
     "test": "jest",
     "tsc": "tsc",
-    "doc": "./node_modules/.bin/esdoc"
+    "doc": "./node_modules/.bin/esdoc",
+    "readme": "jsdoc2md  --files ./src/*.ts --template ./README.md.hbs --configure ../../jsdoc2md.json > ./README.md"
   },
   "dependencies": {
     "@types/crypto-js": "^3.1.43",
