docs(burstjs): auto-generate README.md (#50)
* docs(lib): add readme to output

* docs(burstjs): auto-generate README.md

--- a/lib/packages/http/tsconfig.json
+++ b/lib/packages/http/tsconfig.json
@@ -11,7 +11,14 @@
         "node_modules/@types"
     ],
     "include": [
-        "./src"
+        "./src",
+        "README.md"
     ],
+  "autogenerate-readme": {
+    "srcFiles": [
+      "./src/**/*.ts"
+    ],
+    "template": "./README.md.hbs"
+  },
     "extends": "../../tsconfig.json"
 }
