--- a/lib/packages/crypto/package.json
+++ b/lib/packages/crypto/package.json
@@ -40,6 +40,7 @@
     "readme": "jsdoc2md  --files ./src/*.ts --template ./README.md.hbs --configure ../../jsdoc2md.json > ./README.md"
   },
   "dependencies": {
+    "@burstjs/util": "^0.0.10",
     "@types/crypto-js": "^3.1.43",
     "@types/node": "^10.12.18",
     "@types/seedrandom": "^2.4.27",
