add @burstjs/util, tag v0.0.13

--- a/lib/packages/util/package.json
+++ b/lib/packages/util/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@burstjs/util",
-  "version": "0.0.10",
+  "version": "0.0.13",
   "description": "Useful utilities and tools for building Burstcoin applications",
   "keywords": [
     "burst",
@@ -55,5 +55,6 @@
   },
   "dependencies": {
     "bn.js": "^4.11.8"
-  }
+  },
+  "gitHead": "d270043990cbfc28dd72c675499b4502eb7a1c40"
 }
