chore(tsconfig): use HEAD for burstjs instead of npm

--- a/web/angular-wallet/tsconfig.json
+++ b/web/angular-wallet/tsconfig.json
@@ -10,9 +10,11 @@
     "experimentalDecorators": true,
     "resolveJsonModule": true,
     "paths": {
-      "@fuse": [
-        "@fuse/"
-      ]
+      "@fuse": ["@fuse/"],
+      "@burstjs/core": ["../../../lib/packages/core"],
+      "@burstjs/crypto": ["../../../lib/packages/crypto"],
+      "@burstjs/util": ["../../../lib/packages/util"],
+      "@burstjs/http": ["../../../lib/packages/http"]
     },
     "target": "es5",
     "typeRoots": [
